--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "phpunit/phpunit": "^7.2",
         "scrutinizer/ocular": "dev-master",
         "orchestra/testbench": "~3.0",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "*",
+        "php-coveralls/php-coveralls": "2.1.x-dev"
     },
     "license": "MIT",
     "authors": [
@@ -35,6 +36,11 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "tests": [
+            "vendor/bin/phpunit"
+        ]
     },
     "minimum-stability": "dev",
     "extra": {
