--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit bootstrap="vendor/autoload.php"
+<phpunit bootstrap="./vendor/autoload.php"
          backupGlobals="false"
          backupStaticAttributes="false"
          colors="true"
@@ -10,8 +10,8 @@
          processIsolation="false"
          stopOnFailure="false">
     <testsuites>
-        <testsuite name="laravel-paystack Test Suite">
-            <directory>tests</directory>
+        <testsuite name="laravel-bulksmsnigeria-notification Test Suite">
+            <directory suffix="Test.php">./tests</directory>
         </testsuite>
     </testsuites>
     <filter>
@@ -19,10 +19,14 @@
             <directory suffix=".php">src/</directory>
         </whitelist>
     </filter>
+    <php>
+        <env name="BULKSMSNIGERIA_FROM" value="Test"/>
+        <env name="BULKSMSNIGERIA_TOKEN" value="1234567890abcdefghijklmnopqrstuvwxyz"/>
+    </php>
     <logging>
         <log type="tap" target="build/report.tap"/>
-        <log type="junit" target="build/report.junit.xml" logIncompleteSkipped="false"/>
-        <log type="coverage-html" target="build/coverage" title="coverage" charset="UTF-8" yui="true" highlight="true" lowUpperBound="35" highLowerBound="70"/>
+        <log type="junit" target="build/report.junit.xml"/>
+        <log type="coverage-html" target="build/coverage" lowUpperBound="35" highLowerBound="70"/>
         <log type="coverage-text" target="build/coverage.txt"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
     </logging>
