--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         "guzzlehttp/guzzle": "5.*|6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.2",
-        "scrutinizer/ocular": "dev-master",
+        "phpunit/phpunit" : "4.*",
+        "scrutinizer/ocular": "~1.1",
+        "satooshi/php-coveralls": "^0.7.0",
         "orchestra/testbench": "~3.0",
-        "squizlabs/php_codesniffer": "*",
-        "php-coveralls/php-coveralls": "2.1.x-dev"
+        "squizlabs/php_codesniffer": "*"
     },
     "license": "MIT",
     "authors": [
