--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,13 @@
         { "packagist": false }
     ],
     "require": {
-        "illuminate/notifications": "~5.0",
+        "illuminate/notifications": "5.*",
         "guzzlehttp/guzzle": "5.*|6.*"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
-        "scrutinizer/ocular": "~1.1",
-        "satooshi/php-coveralls": "^0.7.0",
-        "orchestra/testbench": "~3.0",
-        "squizlabs/php_codesniffer": "*"
+        "sebastian/phpcpd": "^4.0",
+        "phpunit/phpunit": "4.*",
+        "orchestra/testbench:~3.0"
     },
     "license": "MIT",
     "authors": [
