--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ php:
 matrix:
     allow_failures:
         - php: hhvm
+        - php: 5.6
+        - php: 7.0
 
 install: travis_retry composer install --no-interaction --prefer-source
 
