--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         { "packagist": false }
     ],
     "require": {
-        "php": "^5.4.0|^7.0",
-        "illuminate/notifications": "5.*",
-        "guzzlehttp/guzzle": "5.*|6.*"
+        "php": "^7.3|^8.0",
+        "illuminate/notifications": "^8.0",
+        "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench": "^7.0|^6.23",
+        "phpunit/phpunit": "^9.4"
     },
     "license": "MIT",
     "authors": [
